--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "body-parser": "1.19.0",
+    "dotenv": "^16.0.1",
     "express": "4.17.1",
     "lodash": "4.17.15",
     "mongoose": "5.12.7"
@@ -34,7 +35,6 @@
     "eslint": "6.8.0",
     "lorem-ipsum": "2.0.3",
     "mongodb-memory-server": "6.3.3",
-    "nodemon": "2.0.7",
-    "typescript": "4.2.4"
+    "nodemon": "2.0.7"
   }
 }
