--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es6",
     "outDir": "dist",
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "exclude": ["node_modules"]
   }
 }
