--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "eslint": "6.8.0",
     "lorem-ipsum": "2.0.3",
     "mongodb-memory-server": "6.3.3",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "typescript": "4.2.4"
   }
 }
