--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,7 @@
     "dotenv": "^16.0.1",
     "express": "4.17.1",
     "lodash": "4.17.15",
-    "mongoose": "5.12.7",
-    "serverless-express": "^2.0.12"
+    "mongoose": "5.12.7"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
